# ml-zoomcamp-notes-and-homework

./: .gitignore  01-contents.py  README.md  export.sh  notes.py  requirements.txt
module-1/: 01-contents.py  02-homework.py  notes.py
module-10/: homework.py  notes.py
module-10/workshop/: main.py  model.py  pyproject.toml
module-10/workshop/data/: dropout_mobilenet-model.onnx
module-2/: homework.py  notes.py
module-3/: homework.py  notes.py
module-4/: homework.py  notes.py
module-5/: Dockerfile  homework.py  notes.py  requirements.txt
module-5/homework_lab/: Dockerfile  main.py  pyproject.toml
module-5/model_package/: api.py  model.py  predict.py
module-6/: homework.py  notes.py
module-8/: .gitignore  homework.py  notes.py
module-9/: homework.py  notes.py
module-9/homework/: requirements.txt
module-9/scikit-model/: Dockerfile  README.md  lambda_function.py  publish.sh
projects/capstone/: README.es.md  README.md  merge.py  notebook.py  pyproject.toml
projects/midterm/: Dockerfile  README.md  api.py  booster_tree  model.py  model_selection.py  notebook.py  preprocess.py  process.py  requirements.txt
results/: 01-contents.html  notes.html
results/module-1/: 01-contents.html  02-homework.html  homework.html  notes.html
results/module-10/: homework.html  notes.html
results/module-2/: homework.html  notes.html
results/module-3/: homework.html  notes.html
results/module-4/: homework.html  notes.html
results/module-5/: homework.html  notes.html
results/module-6/: homework.html  notes.html
results/module-8/: homework.html  (+1 more)
(+33 files in other folders)
