[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "keras-image-helper>=0.0.2",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
